@@ -19,11 +19,11 @@
  ******************************************************************************/
 
 
-#include "feedback.h"
-
 #ifdef HAVE_CONFIG_H
 # include <config.h>
 #endif
+
+#include "feedback.h"
 
 #include <stdarg.h>
 #include <stdio.h>
