@@ -19,15 +19,16 @@
  ******************************************************************************/
 
 
-#include "file.h"
-
 #ifdef HAVE_CONFIG_H
 # include <config.h>
 #endif
 
+#include "file.h"
+
 #include <fcntl.h>
 #include <sys/stat.h>
 #include <sys/mman.h>
+
 
 void*
 file_map (const char *filename, size_t *length)
@@ -41,15 +42,25 @@ file_map (const char *filename, size_t *length)
 
   *length = sb.st_size;
 
-  void *data = mmap(NULL, sb.st_size, PROT_READ, MAP_PRIVATE, fd, 0);
+  void *data;
+  if (sb.st_size > 0)
+    data = mmap(NULL, sb.st_size, PROT_READ, MAP_PRIVATE, fd, 0);
+  else
+    data = (void*)"";
+
   assert_inner_ptr(data != MAP_FAILED, "%s: mmap", filename);
 
   return data;
 }
 
-void
+int
 file_unmap (void *data, size_t length)
 {
-  munmap(data, length);
+  if (length > 0)
+    {
+      int res = munmap(data, length);
+      assert_inner(res == 0, "munmap");
+    }
+  return 0;
 }
 
